style: corrected spacing hero css file

--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,6 +1,5 @@
 .hero-section {
-  background-color: beige;
-  width: 100vw;
+  width: 100%;
   height: 63.8rem;
   position: relative;
 }
@@ -11,56 +10,59 @@
 }
 
 .hero-section > #promo-banners {
+  width: 62%;
+  height: 7.7rem;
+
   display: flex;
   position: absolute;
-  width: 62%;
-  height: 77px;
-  float: top;
   top: 0;
-  left: 300px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .hero-section #promo-banner-one {
   width: 45%;
   height: 100%;
+
   position: absolute;
-  left: 0px;
+  left: 0rem;
   z-index: 2;
+
   background-color: #ffffff;
   border-radius: 0px 0px 0px 60px;
-  border-bottom: 3px  #BAA370 solid;
-  border-left: 3px  #BAA370 solid;
+  border-bottom: 3px #baa370 solid;
+  border-left: 3px #baa370 solid;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.hero-section #promo-banner-one  > p{
+.hero-section #promo-banner-one > p {
   font-size: 2.8rem;
   color: #000000;
+
   margin-right: 6rem;
 }
 
 .hero-section #promo-banner-two {
-  position: absolute;
-  right: 0rem;
   width: 65%;
   height: 100%;
+
+  position: absolute;
+  right: 0rem;
+  z-index: 2;
+
   background-color: #bf8b70;
   border-radius: 0px 0px 60px 60px;
-  border: 3px #BAA370 solid;
-  z-index: 2;
+  border: 3px #baa370 solid;
 
   display: flex;
   justify-content: center;
   align-items: center;
-
-  
 }
 
-.hero-section #promo-banner-two > p{
+.hero-section #promo-banner-two > p {
   font-size: 2.4rem;
-  color: #FFFFFF;
+  color: #ffffff;
 }
-
